--- a/.github/workflows/customer-loyalty-agent.yml
+++ b/.github/workflows/customer-loyalty-agent.yml
@@ -39,5 +39,5 @@ jobs:
 
       - name: Run customer loyalty agent initializer
         run: |
-          cd app/
+          cd src/
           python app/agents/customerLoyaltyAgent_initializer.py
